2025-03-02 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Improve genPlus, genMinus and genlsh16.
      Several cosmetic changes to match sdcc coding style.
      Rewrite genlsh32.

2025-02-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Adjust C94/C95 support documentation.

2025-02-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  device/include/stdbit.h,
	  device/lib/__stdc_bit_ceilull.c,
	  device/lib/__stdc_first_leading_one.c,
	  device/lib/incl.mk,
	  device/lib/__stdc_bit_width.c,
	  device/lib/__stdc_count_ones.c,
	  device/lib/__stdc_first_trailing_one.c,
	  device/lib/__stdc_leading_zeros.c,
	  device/lib/__stdc_trailing_ones.c,
	  doc/sdccman.lyx,
	  support/regression/tests/bitcount.c.in,
	  support/regression/tests/bitcountleading.c.in,
	  support/regression/tests/bitcounttrailing.c.in,
	  support/regression/tests/bitfirst.c.in,
	  support/regression/tests/bitfirstleading.c.in:
	  Make the C23 standard library bit and byte utilities (stdbit.h) more closely follow the final ISO C23 standard instead of the 2022 C2X draft.

2025-02-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/peep.c,
	  src/stm8/peep.c:
	  Improve notUsed accuracy based on patch #487 by Mike Vand.

2025-02-23 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Remove dead/redundant code.
      Improve loadRegFromAop, genRightShift and genLeftShift.
      Rename multiple shift functions.

2025-02-22 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Replace direct access to _G.tempOfs with a function.
      Remove AOP_IDX dead code.
      Replace several instances of storeRegTempIfSurv with storeRegTempIfUsed.

2025-02-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3834.c:
	  Provide required external definition of inline function.
	* src/SDCCopt.c,
	  src/f8/main.c,
	  src/port.h,
	  src/stm8/main.c:
	  Simplify equality operator handling.
